[gd_scene load_steps=25 format=3 uid="uid://dsmgkxfegqyio"]

[ext_resource type="Script" path="res://level.gd" id="1_hbxg0"]
[ext_resource type="Texture2D" uid="uid://dhjfbs3drufbd" path="res://healthenergymeter.png" id="1_nwjc3"]
[ext_resource type="PackedScene" uid="uid://c7x60q5ewjji1" path="res://player.tscn" id="2_bm1x8"]
[ext_resource type="Shader" path="res://world_1.gdshader" id="2_snxlu"]
[ext_resource type="Texture2D" uid="uid://ks8shw5s0wv7" path="res://yarn.png" id="4_fga3i"]
[ext_resource type="Texture2D" uid="uid://c3lai1wws6oeu" path="res://icon.svg" id="4_rb6jj"]
[ext_resource type="Texture2D" uid="uid://bbkt864rgpdvq" path="res://glow1.png" id="5_48glw"]
[ext_resource type="Script" path="res://Line2D.gd" id="5_doiti"]
[ext_resource type="Texture2D" uid="uid://d0f3pjjk5ff4p" path="res://screengib2.png" id="6_v58pc"]
[ext_resource type="Texture2D" uid="uid://wvcxgrspbtqd" path="res://screengib1.png" id="6_xq1fn"]
[ext_resource type="AudioStream" uid="uid://yq2b3yq0d0bb" path="res://synthrepeat.wav" id="9_5n4ai"]
[ext_resource type="Shader" uid="uid://cb7qdai8xu2wa" path="res://sky.tres" id="9_vl0d1"]
[ext_resource type="AudioStream" uid="uid://bycpe4edhg7ep" path="res://synthintro.wav" id="10_vy1ha"]
[ext_resource type="Script" path="res://radar.gd" id="14_k7as7"]
[ext_resource type="Texture2D" uid="uid://cqb3vp12pcgma" path="res://blip.png" id="15_vgf3d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t1b52"]
radius = 31.0161

[sub_resource type="CircleShape2D" id="CircleShape2D_cr4m0"]
radius = 34.2345

[sub_resource type="CircleShape2D" id="CircleShape2D_ptn1i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fkn0l"]
radius = 1.60074

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3mckd"]
shader = ExtResource("2_snxlu")
shader_parameter/star_count = 300.0
shader_parameter/viewport_bounds = Quaternion(0, 0, 1280, 720)
shader_parameter/min_star_size = 0.5
shader_parameter/max_star_size = 4.353
shader_parameter/upward_speed = -29.37

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rewng"]
shader = ExtResource("9_vl0d1")
shader_parameter/cloudscale = 1.1
shader_parameter/speed = -0.1
shader_parameter/clouddark = 1.997
shader_parameter/cloudlight = 0.349
shader_parameter/cloudcover = -0.569
shader_parameter/cloudalpha = 3.21
shader_parameter/skytint = 0.652
shader_parameter/skycolour1 = Vector3(0.2, 0.4, 0.6)
shader_parameter/skycolour2 = Vector3(0.4, 0.7, 1)
shader_parameter/m = Transform2D(2.089, -1.2, 1.139, 2.79, 0, 0)

[sub_resource type="Environment" id="Environment_l0313"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.56
glow_strength = 1.53
glow_bloom = 0.07
glow_hdr_threshold = 0.8
glow_hdr_scale = 2.25
fog_light_color = Color(0.517647, 0.552941, 0.607843, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vkuy4"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_55ppn"]
blend_mode = 1

[node name="world1" type="Node2D"]
script = ExtResource("1_hbxg0")
islevel2 = false

[node name="enemies" type="Node2D" parent="."]

[node name="lines" type="Node" parent="."]

[node name="line1" type="Line2D" parent="lines"]
z_index = -1000
width = 5.0
default_color = Color(0.933333, 0.294118, 0.945098, 1)
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("5_doiti")
line1s = [NodePath("../../chain/bodies/ball"), NodePath("../../chain/bodies/joint4"), NodePath("../../chain/bodies/joint3"), NodePath("../../chain/bodies/joint2"), NodePath("../../chain/bodies/joint1"), NodePath("../../player/pinpoint")]

[node name="chain" type="Node2D" parent="."]

[node name="bodies" type="Node2D" parent="chain"]

[node name="ball" type="RigidBody2D" parent="chain/bodies" groups=["ball"]]
position = Vector2(560, 436)
collision_layer = 5
collision_mask = 5
mass = 5.41
gravity_scale = 0.45

[node name="Sprite2D" type="Sprite2D" parent="chain/bodies/ball"]
scale = Vector2(0.171825, 0.182671)
texture = ExtResource("4_fga3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chain/bodies/ball"]
shape = SubResource("CircleShape2D_t1b52")

[node name="ballarea" type="Area2D" parent="chain/bodies/ball"]
collision_layer = 257
collision_mask = 257

[node name="CollisionShape2D2" type="CollisionShape2D" parent="chain/bodies/ball/ballarea"]
shape = SubResource("CircleShape2D_cr4m0")

[node name="joint1" type="RigidBody2D" parent="chain/bodies"]
position = Vector2(560, 257)
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="chain/bodies/joint1"]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("15_vgf3d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chain/bodies/joint1"]
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_ptn1i")

[node name="pinjoin2" type="PinJoint2D" parent="chain/bodies/joint1"]
node_a = NodePath("..")
node_b = NodePath("../../joint2")
softness = 1.0

[node name="joint2" type="RigidBody2D" parent="chain/bodies"]
position = Vector2(560, 284)
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="chain/bodies/joint2"]
visible = false
scale = Vector2(0.34375, 0.34375)
texture = ExtResource("15_vgf3d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chain/bodies/joint2"]
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_ptn1i")

[node name="pinjoin2" type="PinJoint2D" parent="chain/bodies/joint2"]
node_a = NodePath("..")
node_b = NodePath("../../joint3")

[node name="joint3" type="RigidBody2D" parent="chain/bodies"]
position = Vector2(560, 308)
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="chain/bodies/joint3"]
visible = false
scale = Vector2(0.34375, 0.34375)
texture = ExtResource("4_rb6jj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chain/bodies/joint3"]
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_ptn1i")

[node name="pinjoin2" type="PinJoint2D" parent="chain/bodies/joint3"]
node_a = NodePath("..")
node_b = NodePath("../../joint4")

[node name="joint4" type="RigidBody2D" parent="chain/bodies"]
position = Vector2(560, 332)
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="chain/bodies/joint4"]
visible = false
scale = Vector2(0.34375, 0.34375)
texture = ExtResource("4_rb6jj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chain/bodies/joint4"]
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_ptn1i")

[node name="pinjoin2" type="PinJoint2D" parent="chain/bodies/joint4"]
node_a = NodePath("..")
node_b = NodePath("../../ball")

[node name="player" parent="." instance=ExtResource("2_bm1x8")]
position = Vector2(560, 177)
rotation = -0.00137409
acceleration = 1500.0
rotation_speed = 5
max_velocity = 250.0

[node name="pinpoint" type="StaticBody2D" parent="player"]
position = Vector2(0, 43)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player/pinpoint"]
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_fkn0l")

[node name="pinjoin1" type="PinJoint2D" parent="player/pinpoint"]
node_a = NodePath("..")
node_b = NodePath("../../../chain/bodies/joint1")

[node name="Sprite2D" type="Sprite2D" parent="player/pinpoint"]
texture = ExtResource("15_vgf3d")

[node name="Camera2D" type="Camera2D" parent="player"]
rotation = 0.00137409
zoom = Vector2(0.6, 0.6)

[node name="stars" type="Node2D" parent="player"]
z_index = -2999
z_as_relative = false
rotation = 0.00137409

[node name="starSprite" type="Sprite2D" parent="player/stars"]
material = SubResource("ShaderMaterial_3mckd")
position = Vector2(1.99988, 65)
scale = Vector2(40.0364, 24.3328)
texture = ExtResource("4_rb6jj")

[node name="sky" type="Node2D" parent="player"]

[node name="skySprite" type="Sprite2D" parent="player/sky"]
z_index = -2988
material = SubResource("ShaderMaterial_rewng")
position = Vector2(34.7516, 2364.05)
rotation = 0.00137409
scale = Vector2(31.0877, 17.3177)
texture = ExtResource("4_rb6jj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l0313")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5n4ai")

[node name="intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_vy1ha")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="scorebox" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1141.0
offset_top = 98.0
offset_right = 1242.0
offset_bottom = 227.0
rotation = 3.14159
scale = Vector2(1.18107, 1.18107)
texture = ExtResource("6_v58pc")

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/scorebox"]
layout_mode = 0
offset_left = 12.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="scorenum" type="Label" parent="CanvasLayer/Control/scorebox"]
material = SubResource("CanvasItemMaterial_vkuy4")
layout_mode = 2
offset_left = 95.6755
offset_top = 37.2547
offset_right = 185.676
offset_bottom = 74.2547
rotation = -3.14159
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(3, 0, 2.20033, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="Label3" type="Label" parent="CanvasLayer/Control/scorebox"]
material = SubResource("CanvasItemMaterial_vkuy4")
layout_mode = 2
offset_left = 93.1355
offset_top = 64.3487
offset_right = 183.135
offset_bottom = 101.349
rotation = -3.14159
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(3, 0, 2.20033, 1)
theme_override_font_sizes/font_size = 24
text = "SCORE:"

[node name="engine" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1007.0
offset_top = 570.0
offset_right = 1055.0
offset_bottom = 616.0

[node name="warning" type="Label" parent="CanvasLayer/Control/engine"]
visible = false
z_index = 200
material = SubResource("CanvasItemMaterial_vkuy4")
layout_mode = 2
offset_left = 53.0
offset_top = -98.0
offset_right = 143.0
offset_bottom = -61.0
scale = Vector2(1.70929, 1.78689)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(3, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "!"

[node name="sheilds" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1129.0
offset_top = 600.0
offset_right = 1185.0
offset_bottom = 660.0
rotation = -3.14159
color = Color(0.811765, 0.811765, 0.811765, 1)

[node name="health" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 995.0
offset_top = 602.0
offset_right = 1058.0
offset_bottom = 662.0
rotation = 3.14159

[node name="altitude" type="Control" parent="CanvasLayer/Control"]
anchors_preset = 0
offset_left = 465.0
offset_top = 8.0
offset_right = 505.0
offset_bottom = 48.0

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/altitude"]
layout_mode = 0
offset_left = 617.0
offset_top = 474.0
offset_right = 718.0
offset_bottom = 603.0
rotation = 1.57079
scale = Vector2(0.425893, 0.425893)
texture = ExtResource("6_v58pc")

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/altitude/TextureRect2"]
layout_mode = 0
offset_left = 12.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/altitude"]
layout_mode = 0
offset_left = 521.0
offset_top = 482.0
offset_right = 637.0
offset_bottom = 604.0
scale = Vector2(0.569639, 0.569639)
texture = ExtResource("6_xq1fn")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/altitude/TextureRect"]
layout_mode = 0
offset_left = 18.0
offset_top = 42.0
offset_right = 101.0
offset_bottom = 89.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/Control/altitude/TextureRect"]
material = SubResource("CanvasItemMaterial_vkuy4")
layout_mode = 2
offset_left = 16.0
offset_top = 47.0
offset_right = 106.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(3, 1.92, 0, 1)
theme_override_font_sizes/font_size = 24
text = "516518 "

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 922.0
offset_top = 529.0
offset_right = 1309.0
offset_bottom = 742.0
scale = Vector2(0.559999, 0.6)
texture = ExtResource("1_nwjc3")
stretch_mode = 4

[node name="radarbg" type="TextureRect" parent="CanvasLayer/Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -91.0
offset_top = -67.0
offset_right = 37.0
offset_bottom = 61.0
scale = Vector2(1.73832, 1.51964)
texture = ExtResource("15_vgf3d")

[node name="radarfg" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -284.0
offset_top = -4.0
offset_right = 103.0
offset_bottom = 209.0
scale = Vector2(1.10935, 1.10935)
texture = ExtResource("1_nwjc3")

[node name="sheilds glow" type="Sprite2D" parent="CanvasLayer/Control"]
modulate = Color(0.0117647, 1, 1, 1)
material = SubResource("CanvasItemMaterial_55ppn")
position = Vector2(1101, 568)
scale = Vector2(0.248047, 0.248047)
texture = ExtResource("5_48glw")

[node name="healthglow" type="Sprite2D" parent="CanvasLayer/Control"]
modulate = Color(1, 0.101961, 0.25098, 1)
material = SubResource("CanvasItemMaterial_55ppn")
position = Vector2(961, 564)
scale = Vector2(0.279297, 0.279297)
texture = ExtResource("5_48glw")

[node name="engineglow" type="Sprite2D" parent="CanvasLayer/Control"]
modulate = Color(1, 0.101961, 0.988235, 1)
material = SubResource("CanvasItemMaterial_55ppn")
position = Vector2(1028, 592)
scale = Vector2(0.213867, 0.213867)
texture = ExtResource("5_48glw")

[node name="radar" type="Control" parent="CanvasLayer/Control"]
anchors_preset = 0
offset_left = 68.0
offset_top = 73.0
offset_right = 108.0
offset_bottom = 113.0
script = ExtResource("14_k7as7")

[node name="playerBlip" type="Sprite2D" parent="CanvasLayer/Control/radar"]
modulate = Color(0, 0.713726, 0, 1)
self_modulate = Color(1, 100, 1, 1)
scale = Vector2(1.3612, 1.16691)
texture = ExtResource("15_vgf3d")

[node name="pingtimer" type="Timer" parent="CanvasLayer/Control/radar"]
wait_time = 0.1
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]

[node name="wave" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="sheildcharge" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="chain/bodies/ball/ballarea" to="." method="_on_ballarea_body_entered"]
[connection signal="damage_taken" from="player" to="." method="_on_player_damage_taken"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="intro" to="." method="_on_intro_finished"]
[connection signal="timeout" from="CanvasLayer/Control/radar/pingtimer" to="CanvasLayer/Control/radar" method="_on_pingtimer_timeout"]
[connection signal="timeout" from="wave" to="." method="_on_wave_timeout"]
[connection signal="timeout" from="sheildcharge" to="." method="_on_sheildcharge_timeout"]
